Document PPDG/src/objects/Contact_Centre_Task__c.object
<CustomObject>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_date__c</fullName>
        <label>Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsible__c</fullName>
        <label>Responsible</label>
        <picklist>
            <picklistValues>
                <fullName>CCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Leader</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_name__c</fullName>
        <label>Task name</label>
        <picklist>
            <picklistValues>
                <fullName>1 remote call observation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 side by side call observation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent Monthly 121</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPI Feedback- Daily performance update on KPI performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROC Weekly ROC Tuesday cascade of process change etc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Leader Monthly 121</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training session (Buzz Session)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly coaching for Team Leaders</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contact Centre Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Task_name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Due_date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Task_name__c</columns>
        <columns>Due_date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,In progress</value>
        </filters>
        <label>My Open Tasks</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>This_Weeks_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Task_name__c</columns>
        <columns>Due_date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>This Weeks Tasks</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>This_months_tasks</fullName>
        <columns>NAME</columns>
        <columns>Task_name__c</columns>
        <columns>Due_date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Months Tasks</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Todays_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Task_name__c</columns>
        <columns>Due_date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays Tasks</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Centre Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>